fix date fonts being too dark in night mode

--- a/themes/htmlStyle/source/css/night.styl
+++ b/themes/htmlStyle/source/css/night.styl
@@ -5,6 +5,10 @@
     a
         color: #b0b0b0
 
+    .pinned-item-date,
+    .post-item-date
+        color: #b0b0b0
+
     blockquote
         background-color: #333333 !important
 
